--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="list.js"> src="main.js"</script>
+<script type="text/javascript" src="list.js"></script>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
